Fixed Scrollbar Styled Button
I fixed the issue with the scrollbar on div's with text...Turns out we have to add a style "overflow:hidden" in the html for some reason idk idk idk

--- a/style.scss
+++ b/style.scss
@@ -19,24 +19,41 @@
     background: #555; 
   }
 */
+
+
 /* COLOR VARIABLES
 ============================================= */
+$blue: #17A4E3;
+$dark:rgb(40, 112, 146);
+$green:#2e93d7;
+
+
 /* GRADIENT LIST
 ============================================= */
+$list3: $blue 0%,$blue 10%,$green 25%,$green 39%,$dark 79%,$dark 100%; 
+
+@mixin gradient($direction, $list) { 
+  background: -webkit-linear-gradient($direction, $list);
+  background: -moz-linear-gradient($direction, $list);
+  background: -o-linear-gradient($direction, $list);
+  background: linear-gradient($direction, $list);  
+}
+
 body {
   height: auto;
+
+}
+*{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    font-family: 'Roboto', sans-serif;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  font-family: 'Roboto', sans-serif;
-}
+
 
 .btn-default {
-  background: -webkit-gradient(linear, left top, right top, from(#17A4E3), color-stop(10%, #17A4E3), color-stop(25%, #2e93d7), color-stop(39%, #2e93d7), color-stop(79%, #287092), to(#287092));
-  background: linear-gradient(left, #17A4E3 0%, #17A4E3 10%, #2e93d7 25%, #2e93d7 39%, #287092 79%, #287092 100%);
+  @include gradient(left,$list3);
   color: white;
   border: 0;
   border-radius: 2em;
@@ -44,6 +61,8 @@ body {
   padding: 0.7em 2em;
   width: 200px;
 }
+
+
 
 .home {
   position: relative;
@@ -56,47 +75,52 @@ body {
   letter-spacing: 0.2rem;
   text-align: center;
 }
-
-.container #navigation a {
-  text-decoration: none;
-  color: #fff;
-  padding: 20px 15px 0 0;
-  font-size: 20px;
+.container #navigation a{
+    text-decoration: none;
+    color: #fff;
+    padding: 20px 15px 0 0;
+    font-size: 20px;
 }
-
-.container #navigation {
-  margin: 20px 0 0 0;
+.container #navigation{
+    margin: 20px 0 0 0;
 }
-
-#header {
+ #header{
   position: absolute;
   max-width: 100%;
   height: auto;
   z-index: -1;
+   
 }
-
 #SloganText {
   margin-top: 15%;
   font-family: 'Roboto';
 }
 
-#headerText {
-  color: #fff;
+#headerText{
+    color: #fff;
 }
+// #headerText a{
+//     color: #fff;
+//     text-decoration: none;
+//     padding: 20px 20px 0 40px;
+//     font-size: 17px;
+//     letter-spacing: 2px;
+// }
 
-#arrowDown {
+#arrowDown{
   margin: 15% 120px 0 0;
 }
-
-#textBoard {
+#textBoard{
   margin: 400px;
   color: #fff;
 }
-
 #schoolBoard {
   background-image: url(/img/Home_2.png);
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
 }
-/*# sourceMappingURL=style.css.map */
+
+#nameCards{
+  
+}
